@@ -34,6 +34,10 @@ include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.lib.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
 
+#----------------------------------------------------------------------------
+#       Local targets
+#----------------------------------------------------------------------------
+
 # To remake the DLL_Test source with xlC on AIX, it works
 # best to wipe out any previously-created tempinc directory.
 # The compiler/linker isn't too smart about instantiating templates...
@@ -46,3 +50,9 @@ ifneq ($(ssl),)
   LIBS += $(PLATFORM_SSL_LIBS)
   LDFLAGS += $(PLATFORM_SSL_LDFLAGS)
 endif # ssl
+
+ifeq ($(shared_libs),1)
+ifneq ($(SHLIB),)
+CPPFLAGS     += -DTPCLS_BUILD_DLL
+endif
+endif
