@@ -53,6 +53,12 @@ include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
 #       Local targets
 #----------------------------------------------------------------------------
 
+ifeq ($(shared_libs),1)
+ifneq ($(SHLIB),)
+CPPFLAGS     += -DACE_RMCAST_BUILD_DLL
+endif
+endif
+
 #----------------------------------------------------------------------------
 #       Dependencies
 #----------------------------------------------------------------------------
